Get All product types on system
